I think I have all the functions I want and that it is working properly. Time to write vignettes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(add_ecodata)
 export(ecodata_cite)
 export(ecodata_cite_table)
 export(ecodata_colorscale)
+export(ecodata_compute_pctchange)
 export(ecodata_description)
 export(ecodata_description_table)
 export(ecodata_fred_openapi)
 export(ecodata_get_fredkey)
 export(ecodata_get_sources)
 export(ecodata_get_units)
+export(ecodata_join)
 export(ecodata_set_fredkey)
 export(ecodata_theme)
 export(geom_recession)
