I'm almost done with my getting started vignette.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(ecodata_get_units)
 export(ecodata_join)
 export(ecodata_set_fredkey)
 export(ecodata_theme)
+export(ecodata_theme_large)
+export(ecodata_theme_normal)
+export(ecodata_theme_small)
 export(geom_recession)
 export(get_ecodata)
 export(get_ecodata_allstates_fred)
