--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,8 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Suggests: 
+    knitr,
+    rmarkdown,
+    tidyverse
+VignetteBuilder: knitr
