Package is largely finished. Getting started vignette is finished.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,9 @@ export(ecodata_theme_normal)
 export(ecodata_theme_small)
 export(geom_recession)
 export(get_ecodata)
+export(get_ecodata_allcountries_wb)
 export(get_ecodata_allstates_fred)
 export(get_ecodata_variable)
-export(get_ecodata_variable_allcountries_wb)
 export(get_ecodata_variable_country_wb)
 export(get_ecodata_variable_fred)
 export(get_ecodata_variable_wb)
@@ -37,6 +37,7 @@ export(get_varcode_url)
 export(get_varcode_url_fred)
 export(get_varcode_url_worldbank)
 export(get_wb_variable_code)
+export(ggplot_ecodata_bar)
 export(ggplot_ecodata_facet)
 export(ggplot_ecodata_ts)
 export(glimpse)
