I extended glimpse and mutate for the function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ecodata_description)
 export(ecodata_description_table)
 export(ecodata_fred_openapi)
 export(ecodata_get_fredkey)
+export(ecodata_get_frequencies)
 export(ecodata_get_sources)
 export(ecodata_get_units)
 export(ecodata_join)
@@ -28,6 +29,7 @@ export(get_ecodata_variable_country_wb)
 export(get_ecodata_variable_fred)
 export(get_ecodata_variable_wb)
 export(get_ecodata_varnames)
+export(get_frequency_types)
 export(get_recessions)
 export(get_state_abbr)
 export(get_state_fips)
@@ -40,4 +42,9 @@ export(get_wb_variable_code)
 export(ggplot_ecodata_bar)
 export(ggplot_ecodata_facet)
 export(ggplot_ecodata_ts)
-export(glimpse)
+export(glimpse.ecodata)
+export(maximum_frequency)
+export(minimum_frequency)
+export(mutate.ecodata)
+export(standardize_frequency)
+export(standardize_frequency_single)
