Everything is working. I have mutate working, with documentation, and another vignette complete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,15 @@ export(ecodata_compute_pctchange)
 export(ecodata_description)
 export(ecodata_description_table)
 export(ecodata_fred_openapi)
+export(ecodata_get_attributes)
 export(ecodata_get_fredkey)
 export(ecodata_get_frequencies)
 export(ecodata_get_sources)
 export(ecodata_get_units)
 export(ecodata_join)
+export(ecodata_scale_comma)
+export(ecodata_scale_dollar)
+export(ecodata_scale_percent)
 export(ecodata_set_fredkey)
 export(ecodata_theme)
 export(ecodata_theme_large)
@@ -45,6 +49,10 @@ export(ggplot_ecodata_ts)
 export(glimpse.ecodata)
 export(maximum_frequency)
 export(minimum_frequency)
+export(mutate)
 export(mutate.ecodata)
 export(standardize_frequency)
 export(standardize_frequency_single)
+export(string_empty)
+export(string_not_empty)
+export(string_not_empty_single)
