Fixed the comma issue in scales. Added colors and fill options to ggplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(ecodata_theme)
 export(ecodata_theme_large)
 export(ecodata_theme_normal)
 export(ecodata_theme_small)
+export(filter)
 export(geom_recession)
 export(get_ecodata)
 export(get_ecodata_allcountries_wb)
@@ -46,6 +47,7 @@ export(get_wb_variable_code)
 export(ggplot_ecodata_bar)
 export(ggplot_ecodata_facet)
 export(ggplot_ecodata_ts)
+export(glimpse)
 export(glimpse.ecodata)
 export(maximum_frequency)
 export(minimum_frequency)
