Added an error check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ecodata_colorscale)
 export(ecodata_compute_pctchange)
 export(ecodata_description)
 export(ecodata_description_table)
+export(ecodata_fred_hasapi)
 export(ecodata_fred_openapi)
 export(ecodata_get_attributes)
 export(ecodata_get_fredkey)
